--- a/Lesson_6/style.css
+++ b/Lesson_6/style.css
@@ -1,3 +1,13 @@
-.test {
+/* .test {
     list-style: none;
+} */
+
+
+.invalid {
+    color: red;
+}
+.box{
+    width: 50px;
+    height: 50px;
+    background-color: red;
 }
